// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin in a stock JBrowse 1`] = `
Object {
  "configId": Any<String>,
  "index": Object {
    "configId": Any<String>,
    "location": Object {
      "base": "http://localhost/path/to/my.vcf.gz.tbi",
      "uri": "/path/to/my.vcf.gz.tbi",
    },
  },
  "type": "VcfTabixAdapter",
  "vcfGzLocation": Object {
    "base": "http://localhost/path/to/my.vcf.gz",
    "uri": "/path/to/my.vcf.gz",
  },
}
`;

exports[`plugin in a stock JBrowse 2`] = `
Object {
  "adapter": Object {
    "configId": Any<String>,
    "index": Object {
      "configId": Any<String>,
      "location": Object {
        "base": "http://localhost/path/to/my.vcf.gz.tbi",
        "uri": "/path/to/my.vcf.gz.tbi",
      },
    },
    "type": "VcfTabixAdapter",
    "vcfGzLocation": Object {
      "base": "http://localhost/path/to/my.vcf.gz",
      "uri": "/path/to/my.vcf.gz",
    },
  },
  "configId": Any<String>,
  "renderers": Object {
    "PileupRenderer": Object {
      "configId": Any<String>,
      "type": "PileupRenderer",
    },
    "SvgFeatureRenderer": Object {
      "configId": Any<String>,
      "labels": Object {
        "configId": Any<String>,
      },
      "type": "SvgFeatureRenderer",
    },
    "configId": Any<String>,
  },
  "type": "VariantTrack",
}
`;
